--- a/abaplint.jsonc
+++ b/abaplint.jsonc
@@ -25,7 +25,7 @@
     "check_include": true,
     "check_syntax": true,
     "global_class": true,
-    "definitions_top": true,
+    "definitions_top": false,
     "implement_methods": true,
     "method_implemented_twice": true,
     "parser_error": true,
