--- a/abaplint.jsonc
+++ b/abaplint.jsonc
@@ -9,6 +9,11 @@
       "files": "/src/**/*.*"
     },
     {
+      "url": "https://github.com/abap2xlsx/abap2xlsx",
+      "folder": "/abap2xlsx",
+      "files": "/src/**/*.*"
+    },
+    {
       "url": "https://github.com/abap2UI5/abap2UI5",
       "folder": "/abap2UI5",
       "files": "/src/**/*.*"
