--- a/abaplint.jsonc
+++ b/abaplint.jsonc
@@ -9,13 +9,18 @@
       "files": "/src/**/*.*"
     },
     {
+      "url": "https://github.com/abap2UI5/abap2UI5",
+      "folder": "/abap2UI5",
+      "files": "/src/**/*.*"
+    },
+    {
       "url": "https://github.com/abap2xlsx/abap2xlsx",
       "folder": "/abap2xlsx",
       "files": "/src/**/*.*"
     },
     {
-      "url": "https://github.com/abap2UI5/abap2UI5",
-      "folder": "/abap2UI5",
+      "url": "https://github.com/abap2UI5-addons/abap2xlsx-ui",
+      "folder": "/abap2xlsx_ui",
       "files": "/src/**/*.*"
     }
   ],
